fixed a paretheses bug added history nav

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     </head>
 
     <body>
+        
         <div class="calculator-wrapper">
-            <input class="screen" placeholder="0"></input>
+            <input class="screen" placeholder="0" autofocus></input>
+            <button data-prev class="previous">&#129092;</button>
+            <p data-history class="history">History</p>
+            <button data-next class="next">&#129094;</button>
             <button data-par left>(</button>
             <button data-par right>)</button>
             <button data-clr>C</button>
